--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "easy-peasy": "^5.0.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.4.0",
-    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "firebase": "^9.4.1",
     "postcss": "^8.3.11",
+    "recoil": "^0.5.2",
     "tailwindcss": "^2.2.19",
     "vite": "^2.6.4"
   }
